style.css edited

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
+
 /*----------------------------------------------------
+github check
 @File: Default Styles
 @Author: Rocky Ahmed
 @URL: http://wethemez.com
