--- a/bootcamp/templates/base.html
+++ b/bootcamp/templates/base.html
@@ -4,10 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Bootcamp{% endblock title %}</title>
-    <link rel="icon" type="image/png" href="{% static 'img/favicon.png' %}">
-    <meta name="description" content="An enterprise Social Network">
-    <meta name="author" content="Sebastian Reyes">
+    <title>{% block title %}INFOShare{% endblock title %}</title>
+    <meta name="description" content="An Information Sharing Portal">
+    <meta name="author" content="Mithilesh Kohale">
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -31,7 +30,7 @@
               <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <a class="navbar-brand" href="#">Bootcamp</a>
+              <a class="navbar-brand" href="#">INFOShare</a>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                   <li class="nav-item">
