added groups feature

--- a/bootcamp/templates/base.html
+++ b/bootcamp/templates/base.html
@@ -45,6 +45,7 @@
                   <li class="nav-item"><a class="nav-link" href="{% url 'qa:index_noans' %}">{% trans 'Q&A' %}</a></li>
                   <li class="nav-item"><a class="nav-link" href="{% url 'messager:messages_list' %}">{% trans 'Inbox' %}</a></li>
                   <li class="nav-item"><a class="nav-link" href="{% url 'users:list' %}">{% trans 'Contacts' %}</a></li>
+                  <li class="nav-item"><a class="nav-link" href="{% url 'groups:list' %}">{% trans 'Groups' %}</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                   {% if not hide_search %}
