--- a/bootcamp/templates/groups/group_list.html
+++ b/bootcamp/templates/groups/group_list.html
@@ -1,7 +1,83 @@
-H!
-{% for group in groups %}
-    <a href="{% url 'groups:detail' group.id %}">
-      {{forloop.counter}} - {{group.name}}
-    </a>br
-    
-{% endfor %}
+{% extends 'base.html' %}
+{% load static i18n %}
+{% load humanize thumbnail %}
+
+{% block title %} {% trans 'groups' %} {% endblock %}
+
+{% block head %}
+
+{% endblock head %}
+
+{% block content %}
+
+  <!-- Page Content -->
+  <div class="container">
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="{% url 'news:list' %}">{% trans 'Home' %}</a></li>
+        <li class="breadcrumb-item active"><a href="{% url 'groups:list' %}">{% trans 'Groups' %}</a></li>
+      </ol>
+    </nav>
+    <div class="row">
+      <!-- Blog Entries Column -->
+      <div class="col-md-8">
+        {% for group in groups %}
+          <!-- Blog Post -->
+          <div class="card mb-4">
+            {% thumbnail group.image "750x300" as im %}
+              <img src="{{ im.url }}" alt="{% trans 'Featured Image' %}" class="card-img-top">
+            {% empty %}
+              <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
+            {% endthumbnail %}
+            <div class="card-body">
+              <h2 class="card-title">{{ group.name|title }}</h2>
+              <p class="card-text">{{ group.description|safe|truncatechars:150 }}</p>
+              <a href="{% url 'groups:detail' group.id %}" class="btn btn-primary">{% trans 'Read More' %} &rarr;</a>              
+            </div>
+
+          </div>
+        {% empty %}
+          <h4 class="no-data">{% trans 'There is no published group yet' %}. <a href="{% url 'groups:create' %}">{% trans 'Be the first one to publish one' %}!</a></h4>
+        {% endfor %}
+
+        {% if is_paginated %}
+          <ul class="pagination justify-content-center mb-4">
+            {% if page_obj.has_previous %}
+              <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}">&larr; {% trans 'Newer' %}</a></li>
+            {% else %}
+              <li class="page-item disabled"><a class="page-link" href="#"><span>&larr;</span></a></li>
+            {% endif %}
+            {% for i in paginator.page_range %}
+              {% if page_obj.number == i %}
+                <li class="page-item disabled"><a class="page-link" href="#">{{ i }} <span class="sr-only">(current)</span></a></li>
+              {% else %}
+                <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+              {% endif %}
+            {% endfor %}
+            {% if page_obj.has_next %}
+              <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">{% trans 'Older' %} &rarr;</a></li>
+            {% else %}
+              <li class="page-item disabled"><a class="page-link" href="#"><span>&rarr;</span></a></li>
+            {% endif %}
+          </ul>
+        {% endif %}
+
+      </div>
+
+      <!-- Sidebar Widgets Column -->
+      <div class="col-md-4">
+        <!-- Write group Widget -->
+        {% if request.user.is_authenticated %}
+          <div class="card my-4">
+            <div class="card-body text-center">
+              <a class="btn btn-success" href="{% url 'groups:create' %}" title="{% trans 'Create a new Group' %}"><i class="fa fa-pencil" aria-hidden="true"></i> {% trans 'New group' %}</a>
+            </div>
+          </div>
+        {% endif %}
+      </div>
+    </div>
+    <!-- /.row -->
+  </div>
+  <!-- /.container -->
+
+{% endblock content %}
